# tdg

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/libtdb/: libtdb.hpp
src/: CMakeLists.txt  libtdb.cpp
test/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt  tdb.cpp
